# bvw

./: Makefile.am  README  configure.ac
libbvw/: Makefile.am  bvw-player-gst.vala  bvw-player.vala  bvw-widget-gtk.vala  bvw-widget.vala  bvw.vala
test/: Makefile.am  test.vala
